compose build dirs

--- a/Springboot_docker/src/compose/docker-compose.yml
+++ b/Springboot_docker/src/compose/docker-compose.yml
@@ -1,26 +1,26 @@
 version: '2'
 services:
   eureka:
-    build: ./eureka
+    build: ./eureka/
     image: eureka_demo
     ports:
      - "8761:8761"
   zuul:
-    build: ./zuul
+    build: ./zuul/
     depends_on:
       - eureka
     image: zuul_demo
     ports:
      - "8765:8765"
   hystrix-dashboard:
-    build: ./hystrix-dashboard
+    build: ./hystrix-dashboard/
     depends_on:
       - zuul
     image: hystrixdashboard_demo
     ports:
      - "7979:7979"
   hello:
-    build: ./hello
+    build: ./hello/
     depends_on:
       - zuul
     image: hello_demo
