--- a/Springboot_docker/src/compose/eureka/Dockerfile
+++ b/Springboot_docker/src/compose/eureka/Dockerfile
@@ -1,26 +1,7 @@
 # Copyright 2016 Jiglesgom
 
-FROM netflixoss/java:8
-MAINTAINER jiglesgom <jiglesgom@gmail.com>
-
-# Install Oracle Java 8
-#ENV JAVA_VER 8
-#ENV JAVA_HOME /usr/lib/jvm/java-8-oracle
-RUN echo 'deb http://ppa.launchpad.net/webupd8team/java/ubuntu trusty main' >> /etc/apt/sources.list && \
-    echo 'deb-src http://ppa.launchpad.net/webupd8team/java/ubuntu trusty main' >> /etc/apt/sources.list
-#    apt-key adv --keyserver keyserver.ubuntu.com --recv-keys C2518248EEA14886 && \
-#    apt-get update && \
-#    echo oracle-java${JAVA_VER}-installer shared/accepted-oracle-license-v1-1 select true | /usr/bin/debconf-set-selections && \ 
-#    apt-get install -y --force-yes --no-install-recommends oracle-java${JAVA_VER}-installer oracle-java${JAVA_VER}-set-default && \
-
-#install maven  
-RUN apt-get update && \
-    apt-get install -y --force-yes --no-install-recommends python-software-properties && \
-#    add-apt-repository ppa:webupd8team/java && \
-    apt-get update && \
-    apt-get install -y --force-yes --no-install-recommends maven && \
-    apt-get install -y --force-yes --no-install-recommends git
-#    rm -rf /var/lib/apt/lists
+FROM jiglesgom/mvn
+LABEL maintainer "jiglesgom@gmail.com"
 
 #clonar Netflix from github https://github.com/Tschuss/Netflix.git
 RUN env GIT_SSL_NO_VERIFY=true git clone https://github.com/Tschuss/Netflix.git && \
