--- a/Springboot_docker/src/compose/zuul/Dockerfile
+++ b/Springboot_docker/src/compose/zuul/Dockerfile
@@ -4,11 +4,11 @@ FROM jiglesgom/eureka
 LABEL maintainer "jiglesgom@gmail.com"
 
 #clonar Netflix from github https://github.com/Tschuss/Netflix.git
-RUN env GIT_SSL_NO_VERIFY=true git clone https://github.com/Tschuss/Netflix.git && \
+#RUN env GIT_SSL_NO_VERIFY=true git clone https://github.com/Tschuss/Netflix.git && \
 #    cd /Netflix/Springboot_eureka; mvn install && \ 
-    cd /Netflix/Springboot_zuul; mvn install && \
+RUN  cd /Netflix/Springboot_zuul; mvn install && \
 #    cd /Netflix/Springboot_hystrix-dashboard; mvn install && \
-#    cd /Netflix/Springboot_hello; mvn install
+#    cd /Netflix/Springboot_hello; mvn install && \
     pwd
     
 #ADD start.sh /
