--- a/Springboot_docker/src/compose/mvn/Dockerfile
+++ b/Springboot_docker/src/compose/mvn/Dockerfile
@@ -24,3 +24,4 @@ RUN apt-get update && \
     rm -rf /var/lib/apt/lists && \
     pwd
     
+CMD ["/usr/lib/jvm/java-8-oracle/bin/java", "-version"]
