--- a/Springboot_docker/src/compose/hystrix-dashboard/Dockerfile
+++ b/Springboot_docker/src/compose/hystrix-dashboard/Dockerfile
@@ -18,4 +18,4 @@ RUN  cd /Netflix/Springboot_hystrix-dashboard; mvn install && \
 EXPOSE 7979
 # 8762 8765 7979
 
-CMD ["$JAVA_HOME/bin/java", "-jar", "/Netflix/Springboot_hystrix-dashboard/target/HystrixDashboardApplication-0.0.1-SNAPSHOT.jar", "-Xmx128M"]
+CMD ["/usr/lib/jvm/java-8-oracle/bin/java", "-jar", "/Netflix/Springboot_hystrix-dashboard/target/HystrixDashboardApplication-0.0.1-SNAPSHOT.jar", "-Xmx128M"]
