more testing with compsitor links

--- a/Springboot_docker/src/compose/zuul/Dockerfile
+++ b/Springboot_docker/src/compose/zuul/Dockerfile
@@ -6,6 +6,8 @@ LABEL maintainer "jiglesgom@gmail.com"
 #clonar Netflix from github https://github.com/Tschuss/Netflix.git
 #RUN env GIT_SSL_NO_VERIFY=true git clone https://github.com/Tschuss/Netflix.git && \
 #    cd /Netflix/Springboot_eureka; mvn install && \ 
+WORKDIR /Netflix
+RUN env GIT_SSL_NO_VERIFY=true git pull
 RUN  cd /Netflix/Springboot_zuul; mvn install && \
 #    cd /Netflix/Springboot_hystrix-dashboard; mvn install && \
 #    cd /Netflix/Springboot_hello; mvn install && \
