--- a/Springboot_docker/src/compose/eureka/Dockerfile
+++ b/Springboot_docker/src/compose/eureka/Dockerfile
@@ -7,7 +7,7 @@ LABEL maintainer "jiglesgom@gmail.com"
 RUN env GIT_SSL_NO_VERIFY=true git clone https://github.com/Tschuss/Netflix.git
 WORKDIR /Netflix
 RUN env GIT_SSL_NO_VERIFY=true git pull
-    cd /Netflix/Springboot_eureka; mvn install && \ 
+RUN cd /Netflix/Springboot_eureka; mvn install && \ 
 #    cd /Netflix/Springboot_zuul; mvn install && \
 #    cd /Netflix/Springboot_hystrix-dashboard; mvn install && \
 #    cd /Netflix/Springboot_hello; mvn install && \
