--- a/Springboot_hystrix-dashboard/src/main/resources/application.yml
+++ b/Springboot_hystrix-dashboard/src/main/resources/application.yml
@@ -21,6 +21,12 @@ logging:
 
 eureka:
   client:
+    serviceUrl:
+      defaultZone: http://eureka:8761/eureka/
+
+
+#eureka:
+#  client:
     #Region where eureka is deployed -For AWS specify one of the AWS regions, for other datacenters specify a arbitrary string
     #indicating the region.This is normally specified as a -D option (eg) -Deureka.region=us-east-1
     region: default
