--- a/Springboot_zuul/src/main/resources/application.yml
+++ b/Springboot_zuul/src/main/resources/application.yml
@@ -21,6 +21,11 @@ zuul:
 server:
   port: 8765
 
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://eureka:8761/eureka/
+
 logging:
   level:
     ROOT: INFO
