--- a/Springboot_zuul/src/main/resources/application.yml
+++ b/Springboot_zuul/src/main/resources/application.yml
@@ -22,10 +22,14 @@ server:
   port: 8765
 
 eureka:
-  client:
+    registerWithEureka: true
+    fetchRegistry: true
+    instance:
+      securePortEnabled: false  client:
     serviceUrl:
       defaultZone: http://eureka:8761/eureka/
 
+    
 logging:
   level:
     ROOT: INFO
