--- a/Springboot_docker/src/single_container/Dockerfile
+++ b/Springboot_docker/src/single_container/Dockerfile
@@ -23,7 +23,7 @@ RUN apt-get update && \
 #    rm -rf /var/lib/apt/lists
 
 #clonar Netflix from github https://github.com/Tschuss/Netflix.git
-RUN env GIT_SSL_NO_VERIFY=true git clone https://github.com/Tschuss/Netflix.git && \
+RUN env GIT_SSL_NO_VERIFY=true git clone -b single_container https://github.com/Tschuss/Netflix.git && \
     cd /Netflix/Springboot_eureka; mvn install && \ 
     cd /Netflix/Springboot_zuul; mvn install && \
     cd /Netflix/Springboot_hystrix-dashboard; mvn install && \
