--- a/Springboot_zuul/src/main/resources/application.yml
+++ b/Springboot_zuul/src/main/resources/application.yml
@@ -25,7 +25,8 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     instance:
-      securePortEnabled: false  client:
+      securePortEnabled: false
+  client:
     serviceUrl:
       defaultZone: http://eureka:8761/eureka/
 
