--- a/Springboot_docker/src/compose/docker-compose.yml
+++ b/Springboot_docker/src/compose/docker-compose.yml
@@ -3,6 +3,7 @@ services:
   mvn:
     build: ./mvn/
     image: jiglesgom/mvn
+
   eureka:
     build: ./eureka/
     image: jiglesgom/eureka
@@ -10,6 +11,7 @@ services:
       - mvn
     ports:
       - "8761:8761"
+
   zuul:
     build: ./zuul/
     image: jiglesgom/zuul
@@ -20,6 +22,7 @@ services:
       - eureka
     ports:
       - "8765:8765"
+
   hystrix-dashboard:
     build: ./hystrix-dashboard/
     image: jiglesgom/hystrix-dashboard
@@ -31,6 +34,7 @@ services:
       - hello
     ports:
       - "7979:7979"
+
   hello:
     build: ./hello/
     image: jiglesgom/hello
@@ -40,3 +44,13 @@ services:
       - eureka
     ports:
       - "8762:8762"
+
+  headers:
+    build: ./headers/
+    image: jiglesgom/headers
+    depends_on:
+      - eureka
+    links:
+      - eureka
+    ports:
+      - "8763:8763"
