--- a/Springboot_headers/src/main/resources/application.yml
+++ b/Springboot_headers/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://eureka:8761/eureka/
+      defaultZone: http://eureka:8761/eureka/,http://localhost:8761/eureka
 
 spring:
   application:
