--- a/Springboot_hystrix-dashboard/src/main/resources/application.yml
+++ b/Springboot_hystrix-dashboard/src/main/resources/application.yml
@@ -22,7 +22,7 @@ logging:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://eureka:8761/eureka/
+      defaultZone: http://eureka:8761/eureka/,http://localhost:8761/eureka
 
 
 #eureka:
