--- a/Springboot_docker/src/single_container/Dockerfile
+++ b/Springboot_docker/src/single_container/Dockerfile
@@ -6,8 +6,8 @@ MAINTAINER jiglesgom <jiglesgom@gmail.com>
 #clonar Netflix from github https://github.com/Tschuss/Netflix.git
 RUN env GIT_SSL_NO_VERIFY=true git clone https://github.com/Tschuss/Netflix.git && \
     cd /Netflix && \
-    env GIT_SSL_NO_VERIFY=true git pull  && \
-    cd /Netflix/Springboot_eureka; mvn install && \ 
+    env GIT_SSL_NO_VERIFY=true git pull
+RUN cd /Netflix/Springboot_eureka; mvn install && \ 
     cd /Netflix/Springboot_zuul; mvn install && \
     cd /Netflix/Springboot_hystrix-dashboard; mvn install && \
     cd /Netflix/Springboot_hello; mvn install && \
