--- a/Springboot_docker/src/compose/eureka/Dockerfile
+++ b/Springboot_docker/src/compose/eureka/Dockerfile
@@ -4,7 +4,7 @@ FROM jiglesgom/mvn
 LABEL maintainer "jiglesgom@gmail.com"
 
 #clonar Netflix from github https://github.com/Tschuss/Netflix.git
-RUN env GIT_SSL_NO_VERIFY=true git clone -b compose https://github.com/Tschuss/Netflix.git
+RUN env GIT_SSL_NO_VERIFY=true git clone https://github.com/Tschuss/Netflix.git
 
 WORKDIR /Netflix/Springboot_eureka
 RUN env GIT_SSL_NO_VERIFY=true git pull
